--- a/CinemaSystemKarloStarcevic/appsettings.json
+++ b/CinemaSystemKarloStarcevic/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=cinema-db;Integrated Security=True;Pooling=False"
+  },
   "AllowedHosts": "*"
 }
